--- a/views/login.hbs
+++ b/views/login.hbs
@@ -26,5 +26,8 @@
                 <button type="submit" class="btn btn-warning btn-lg">Create Account</button>
             </div>
         </div>
+	<div>
+	<div class="g-signin2" data-onsuccess="onSignIn"></div>
+	</div>
     </form>
 </div>
