--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,10 +21,23 @@
                        placeholder="Password">
             </div>
         </div>
+	<div class="form-group">
+            <div class="col-sm-10 col-sm-offset-2">
+            <div class="col-sm-3">
+                <label for="inputEmail " class="control-label">Email</label>
+            </div>
+             <div class="col-sm-15">
+                <input type="Email" class="form-control input-lg required" id="inputEmail"
+                       placeholder="Email">
+            </div>        </div>
+
         <div class="form-group">
             <div class="row col-sm-offset-2 col-sm-10 mt">
                 <button type="submit" class="btn btn-warning btn-lg">Create Account</button>
             </div>
         </div>
+	<div>
+	 <div class="g-signin2" data-onsuccess="onSignIn"></div>
+	</div>
     </form>
 </div>
